# consilium-codegraph

./: .gitignore  CLAUDE.md  Cargo.toml  PARSER_LIMITATIONS.md  PRD.md  README.md  V1_IMPLEMENTATION_PLAN.md  debug_go.rs  demo.py  simple_demo.py  test.scip  test_go.go  test_incremental.sh  test_python.py  test_scip_index.json  test_scip_parse.rs
.reviewbot/: graph.db
agent_api/: .coverage  Makefile  __init__.py  agent_tools.py  analyzer.py  code_graph.py  example_agent.py  helpers.py  models.py  requirements.txt  simple_api.py  test_simple_api.py
agent_api/analyzers/: __init__.py  security_analyzer.py
agent_api/tests/: __init__.py  conftest.py  test_agent_tools.py  test_analysis.md  test_analyzer.py  test_code_graph.py  test_critical_missing.py  test_helpers.py  test_models.py  test_simple_api.py
crates/core/: Cargo.toml
crates/core/src/: language_strategy.rs  lib.rs  main.rs  metrics.rs  resolution.rs  resolution_old.rs  walker.rs
crates/core/tests/: boundary_test.rs  cross_language_dependency_tests.rs  database_persistence_tests.rs  edge_case_tests.rs  fixtures_test.rs  go_scip_test.rs  incremental_processing_tests.rs  incremental_semantic_test.rs  integration_test.rs  language_strategy_test.rs  multi_lang_integration_test.rs  multi_language_integration_test.rs  performance_metrics_test.rs  performance_regression_test.rs  performance_test.rs  python_scip_test.rs  resolution_test.rs  rust_integration_test.rs  scip_golden_test.rs  scip_integration_test.rs  scip_parsing_tests.rs  scip_performance_benchmark.rs  simple_benchmark.rs  strict_integration_test.rs  system_integration_test.rs
crates/cpp_harness/: Cargo.toml
crates/cpp_harness/src/: complex_tests.rs  debug.rs  edge_case_extreme_tests.rs  edge_cases.rs  error_handling_tests.rs  lib.rs  lib.rs.bak  stress_tests.rs  strict_tests.rs  version_detector.rs  version_tests.rs
crates/csharp_harness/: Cargo.toml
crates/csharp_harness/src/: lib.rs
crates/go_harness/: Cargo.toml
crates/go_harness/src/: lib.rs  test_fixtures.rs
crates/java_harness/: .gitignore  Cargo.toml  build.rs
crates/java_harness/src/: complex_tests.rs  debug.rs  edge_case_extreme_tests.rs  edge_cases.rs  error_handling_tests.rs  lib.rs  stress_tests.rs  strict_tests.rs  version_detector.rs
crates/joern_harness/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  version.rs
crates/py_harness/: Cargo.toml
crates/py_harness/src/: lib.rs  test_fixtures.rs
crates/rust_harness/: .gitignore  Cargo.toml  build.rs
crates/rust_harness/.reviewbot/: graph.db  graph.db-shm  graph.db-wal
crates/rust_harness/src/: lib.rs
crates/scip_mapper/: Cargo.toml
crates/scip_mapper/src/: lib.rs  test_parse.rs
crates/store/: Cargo.toml
crates/store/src/: graph.rs  lib.rs
crates/ts_harness/: Cargo.toml
crates/ts_harness/src/: lib.rs  test_fixtures.rs
fixtures/.reviewbot/: graph.db
fixtures/go/: example.go
fixtures/python/: example.py
fixtures/typescript/: example.ts
test_csharp_project/: Calculator.cs
test_csharp_project/.reviewbot/: graph.db
test_python_project/: index.scip  main.py  models.py  python_scip_output.json
test_python_project/.reviewbot/: graph.db
test_ts_project/: index.scip  main.ts  scip_output.json  tsconfig.json  user.ts
test_ts_project/.reviewbot/: graph.db
test_ts_project/scip-snapshot/: main.ts  user.ts
