[workspace]
members = [
    "crates/core",
    "crates/protocol",
    "crates/store",
    "crates/ts_harness",
    "crates/scip_mapper"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Consilium Team"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
petgraph = "0.6"
rayon = "1.10"
ignore = "0.4"
tree-sitter = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
