[workspace]
members = [
    "crates/core",
    "crates/protocol",
    "crates/store",
    "crates/ts_harness",
    "crates/py_harness",
    "crates/go_harness",
    "crates/scip_mapper"
, "crates/rust_harness", "crates/java_harness", "crates/cpp_harness"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Consilium Team"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
petgraph = "0.8.2"
rayon = "1.10"
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.23"
tree-sitter-go = "0.25"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
