[package]
name = "reviewbot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "reviewbot"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
store = { path = "../store" }
ts_harness = { path = "../ts_harness" }
py_harness = { path = "../py_harness" }
go_harness = { path = "../go_harness" }
rust_harness = { path = "../rust_harness" }
java_harness = { path = "../java_harness" }
cpp_harness = { path = "../cpp_harness" }
scip_mapper = { path = "../scip_mapper" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3.14"