[package]
name = "java_harness"
version.workspace = true
edition.workspace = true
authors.workspace = true

[build-dependencies]
cc = "1.0"

[dependencies]
protocol = { path = "../protocol" }
tree-sitter = { workspace = true }
tree-sitter-java = "0.23"
anyhow = { workspace = true }
tracing = { workspace = true }
md5 = "0.7"