[package]
name = "joern_harness"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
tempfile = "3.0"
csv = "1.0"
petgraph = "0.6"