[package]
name = "store"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
protocol = { path = "../protocol" }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.14"