[package]
name = "ts_harness"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
protocol = { path = "../protocol" }
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = "0.23"
anyhow = { workspace = true }
tracing = { workspace = true }